[tool.poetry]
name = "pagemonitor"
version = "0.1.0"
description = "Monitor website availability and pass metrics into Apache Kafka"
license = "MIT"
authors = ["Pavlo Dmytrenko <mail@pavdmyt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
structlog = "^20.1.0"
environs = "^8.0.0"
backoff = "^1.10.0"
confluent-kafka = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.4.2"
wrapt = "^1.12.1"

[tool.poetry.scripts]
pagemon = 'pagemonitor.cmd:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
